monticore-generator/src/test/resources/cocos/invalid/A0112/A0112a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0112;

grammar A0112a {

  Foo = "foo";

  interface Bar = "bar";

  Bar = "foo";

}
